# IQC_Dashboard

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
descriptor_kit/: README.md  __init__.py  api.py  requirements.txt
descriptor_kit/core/: __init__.py  cip.py  constants.py  contracts.py  geometry.py  hammett.py  sigma_data.py  steric.py  topology.py
descriptor_kit/descriptors/: __init__.py  pair.py  product.py  reactant.py
descriptor_kit/example/: run_example.py  type_II_product.xyz  type_I_product.xyz  type_I_reactant.xyz
iqc_dashboard/: __init__.py  app.py  cli.py
notebooks/: demo_parquet.ipynb
tests/: __init__.py  conftest.py  test_cli.py  test_data_manager.py  test_descriptors.py  test_navigation_state.py  test_render_molecule.py
